<resources>
    <string name="app_name">CasaCeroUno</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logo">Logo</string>
    <string name="tv_etiqueta">Domótica aplicada</string>
    <string name="ingresar_usuario">Usuario</string>
    <string name="ingresar_password">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="switch_recordar">Recordar</string>

    <string name="encendido">On/Off</string>
    <string name="input">Input</string>

    <string name="mute">Mute</string>
    <string name="canal_ant">Anterior</string>
    <string name="ok">Ok</string>

    <string name="flecha_up">Arriba</string>
    <string name="flecha_dw">Abajo</string>
    <string name="flecha_lf">Izquierda</string>
    <string name="flecha_rg">Derecha</string>
    <string name="proyector">proyector</string>

    <string name="canal_1">1</string>
    <string name="canal_2">2</string>
    <string name="canal_3">3</string>
    <string name="canal_4">4</string>
    <string name="canal_5">5</string>
    <string name="canal_6">6</string>
    <string name="canal_7">7</string>
    <string name="canal_8">8</string>
    <string name="canal_9">9</string>
    <string name="canal_0">0</string>

    <string name="volumen">Volúmen</string>
    <string name="canal">Canales</string>

    <string name="string_temperatura">Temperatura</string>

</resources>
